--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
   "version": 2,
-  "framework": "express",
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": ".",
-  "env": {
-    "NODE_ENV": "production",
-    "JWT_SECRET": "@JWT_SECRET@",
-    "DATABASE_URL": "@DATABASE_URL@"
-  },
-  "functions": {
-    "backend/index.js": {
-      "memory": 1024,
-      "maxDuration": 30
+  "builds": [
+    {
+      "src": "frontend-server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "backend/index.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -22,16 +18,6 @@
     {
       "src": "/(.*)",
       "dest": "frontend-server.js"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "backend/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "frontend-server.js"
     }
   ]
 }
